Fix for long URLs not displaying properly on mobile devices.

--- a/css/rcv-styles.css
+++ b/css/rcv-styles.css
@@ -32,7 +32,9 @@ h1, h2, h3, h4 {
 
 p {
   font-size: 1em;
+  overflow-wrap: break-word;
   padding-bottom: 0.75em;
+  word-wrap: break-word;
 }
 
 ul {
